# nlp-self-education

./: 001_single_perceptron.py  002_kelas_perceptron.py  003_multi_class.py  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
