  
[tool.poetry]
exclude = ["**/*"]
name = "self-learning"
version = "0.1.0"
description = ""
authors = ["*"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"


[tool.poetry.dev-dependencies]


[tool.taskipy.tasks]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"